<resources>
    <string name="app_name">ScholarShare</string>
    <string name="post">Post</string>
    <string name="requirements">Requirements</string>
    <string name="act">ACT</string>
    <string name="gpa">GPA</string>
    <string name="gender">Gender</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="state">State</string>
    <string name="specifications">Specifications</string>
    <string name="enter">Enter the specifications</string>


    <string-array name="ACTScores">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
    </string-array>


    <string-array name="GPAList">
        <item>0.1</item>
        <item>0.2</item>
        <item>0.3</item>
        <item>0.4</item>
        <item>0.5</item>
        <item>0.6</item>
        <item>0.7</item>
        <item>0.8</item>
        <item>0.9</item>
        <item>1.0</item>
        <item>1.1</item>
        <item>1.2</item>
        <item>1.3</item>
        <item>1.4</item>
        <item>1.5</item>
        <item>1.6</item>
        <item>1.7</item>
        <item>1.8</item>
        <item>1.9</item>
        <item>2.0</item>
        <item>2.1</item>
        <item>2.2</item>
        <item>2.3</item>
        <item>2.4</item>
        <item>2.5</item>
        <item>2.6</item>
        <item>2.7</item>
        <item>2.8</item>
        <item>2.9</item>
        <item>3.0</item>
        <item>3.1</item>
        <item>3.2</item>
        <item>3.3</item>
        <item>3.4</item>
        <item>3.5</item>
        <item>3.6</item>
        <item>3.7</item>
        <item>3.8</item>
        <item>3.9</item>
        <item>4.0</item>
    </string-array>

    <string-array name="ethnicityList">
        <item>African American</item>
        <item>Native American/Indigenous Peoples</item>
        <item>White or Caucasian></item>
        <item>Asian</item>
        <item>Hispanic</item>
        <item>Pacific Islander</item>
        <item>Multiracial</item>
        <item>Other</item>
    </string-array>

    <string-array name="genderList">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

<<<<<<< HEAD
=======
    <string-array name="stateList">
        <item>AK</item>
        <item>AL</item>
        <item>AR</item>
        <item>AZ</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DC</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>GU</item>
        <item>HI</item>
        <item>IA</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>MA</item>
        <item>MD</item>
        <item>ME</item>
        <item>MH</item>
        <item>MI</item>
        <item>MN</item>
        <item>MO</item>
        <item>MS</item>
        <item>MT</item>
        <item>NC</item>
        <item>ND</item>
        <item>NE</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NV</item>
        <item>NY</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>PR</item>
        <item>PW</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VA</item>
        <item>VI</item>
        <item>VT</item>
        <item>WA</item>
        <item>WI</item>
        <item>WV</item>
        <item>WY</item>
    </string-array>


>>>>>>> 39bdd8c4d723e9b3db54a68604173c207b7922fc

</resources>
