<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add">

    <Spinner
        android:id="@+id/StateSpinner"
        android:layout_width="136dp"
        android:layout_height="30dp"
        tools:layout_editor_absoluteX="246dp"
        tools:layout_editor_absoluteY="276dp" />

    <Spinner
        android:id="@+id/EthnicitySpinner"
        android:layout_width="136dp"
        android:layout_height="30dp"
        tools:layout_editor_absoluteX="235dp"
        tools:layout_editor_absoluteY="235dp" />

    <Spinner
        android:id="@+id/GPASpinner"
        android:layout_width="136dp"
        android:layout_height="30dp"
        tools:layout_editor_absoluteX="235dp"
        tools:layout_editor_absoluteY="179dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="78dp"
        android:layout_height="50dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/post"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="293dp"
        tools:layout_editor_absoluteY="642dp" />

    <Spinner
        android:id="@+id/ACTspinner"
        android:layout_width="136dp"
        android:layout_height="30dp"
        tools:layout_editor_absoluteX="235dp"
        tools:layout_editor_absoluteY="135dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requirements"
        android:textSize="50sp"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="10dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/act"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="91dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:text="@string/gpa"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="135dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/gender"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="179dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/ethnicity"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="224dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/state"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="268dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="83dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="144dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="202dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="267dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="330dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="364dp"
        android:layout_height="44dp"
        android:text="@string/specifications"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="376dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="364dp"
        android:layout_height="159dp"
        android:ems="10"
        android:hint="@string/enter"
        android:selectAllOnFocus="false"
        android:shadowColor="@android:color/darker_gray"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="447dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="47dp"
        android:layout_height="39dp"
        android:text="From:"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="643dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="enter your name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="642dp" />

</android.support.constraint.ConstraintLayout>